objects/Bayer_Product__c.object
<CustomObject>
    <fields>
        <fullName>All_Material_Included__c</fullName>
        <externalId>true</externalId>
        <label>All Material Included</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baycox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baytril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bayer Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bayer Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bayer Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>